// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches dark 1`] = `
.c0 {
  display: inline-block;
  padding: 0.25em 0.4em;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25rem;
  color: #fff;
  background-color: #343a40;
}

.c0:empty {
  display: none;
}

<span
  className="c0"
/>
`;

exports[`Styles matches dark action 1`] = `
.c0 {
  display: inline-block;
  padding: 0.25em 0.4em;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25rem;
  color: #fff;
  background-color: #343a40;
}

.c0:empty {
  display: none;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0 > a:hover,
.c0 > a:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:hover,
.c0:focus {
  background-color: #1d2124;
}

<span
  action={true}
  className="c0"
/>
`;
